bk_ida/gccida/c2/scan_loop
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/scan_loop/src/loop.c:1079:4: error: expected ';' after expression
rtx v6; // r15 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/scan_loop/src/loop.c:1079:5: error: use of undeclared identifier 'v6'
rtx v6; // r15 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/scan_loop/src/loop.c:1082:4: error: expected ';' after expression
rtx v9; // r14 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/scan_loop/src/loop.c:1082:5: error: use of undeclared identifier 'v9'
rtx v9; // r14 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/scan_loop/src/loop.c:1083:4: error: expected ';' after expression
rtx v10; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/scan_loop/src/loop.c:1083:5: error: use of undeclared identifier 'v10'
rtx v10; // rbp 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/scan_loop/src/loop.c:1084:4: error: expected ';' after expression
rtx nonnote_insn; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/scan_loop/src/loop.c:1084:5: error: use of undeclared identifier 'nonnote_insn'
rtx nonnote_insn; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/scan_loop/src/loop.c:1086:4: error: expected ';' after expression
rtx v13; // r12 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/scan_loop/src/loop.c:1086:5: error: use of undeclared identifier 'v13'; did you mean 'v12'?
rtx v13; // r12 
    ^~~
    v12
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/scan_loop/src/loop.c:1085:15: note: 'v12' declared here
 struct loop *v12; // rdx 
              ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/scan_loop/src/loop.c:1087:4: error: expected ';' after expression
rtx v14; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/scan_loop/src/loop.c:1087:5: error: use of undeclared identifier 'v14'; did you mean 'v12'?
rtx v14; // rax 
    ^~~
    v12
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/scan_loop/src/loop.c:1085:15: note: 'v12' declared here
 struct loop *v12; // rdx 
              ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/scan_loop/src/loop.c:1091:4: error: expected ';' after expression
rtx v18; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/scan_loop/src/loop.c:1091:5: error: use of undeclared identifier 'v18'
rtx v18; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/scan_loop/src/loop.c:1100:4: error: expected ';' after expression
rtx v27; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/scan_loop/src/loop.c:1100:5: error: use of undeclared identifier 'v27'
rtx v27; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/scan_loop/src/loop.c:1108:4: error: expected ';' after expression
rtx scan_start; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/scan_loop/src/loop.c:1108:5: error: use of undeclared identifier 'scan_start'
rtx scan_start; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/scan_loop/src/loop.c:1110:4: error: expected ';' after expression
rtx top; // rax 
   ^
   ;
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/scan_loop/src/obj/loop.o] Error 1
